@@ -48,6 +48,9 @@ public:
 	//! Reads attributes of the scene node.
 	virtual void deserializeAttributes(io::IAttributes* in, io::SAttributeReadWriteOptions* options=0);
 
+	//! Creates a clone of this scene node and its children.
+	virtual ISceneNode* clone(ISceneNode* newParent=0, ISceneManager* newManager=0); 
+
 private:
 
 	video::SLight LightData;
