@@ -47,6 +47,9 @@ namespace scene
 		//! Returns type of the scene node
 		virtual ESCENE_NODE_TYPE getType() const { return ESNT_SKY_BOX; }
 
+		//! Creates a clone of this scene node and its children.
+		virtual ISceneNode* clone(ISceneNode* newParent=0, ISceneManager* newManager=0); 
+
 	private:
 
 		core::aabbox3d<f32> Box;
