@@ -16,6 +16,9 @@ Changes in version 1.3.1 (?? Mar 2007)
    for example in an editor. See ICursorControl::setReferenceRect() for details.
    (Windows only implementation currently)
 
+ - It is now possible to clone single scene nodes (ISceneNode::clone()) and to create copies
+   of a whole scene graph (ISceneManager::createNewSceneManager(cloneContent=true);
+
  - IAttributes now supports a user pointer (void*)
 
  - Added query methods to scene manager: Find Scene nodes by type
